--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^2.24.2
   country_picker: ^2.0.26
   dio: ^5.6.0
+  velocity_x: ^4.2.1
+  weather: ^3.1.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +65,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/icons/
+    - assets/images/logo/
     - assets/anime/
     - assets/icons/
+    - assets/foodly/
+    - assets/foodly/banners/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
